--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
-/* *{
-    background: linear-gradient(to right, rgb(161, 236, 161),white);
+*{
+/*     background: linear-gradient(to right, rgb(161, 236, 161),white); */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,27 +8,6 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 } 
 
-.flex-nav {
-    background:linear-gradient(black,rgb(1, 130, 1), rgb(1, 125, 1));
-    background: linear-gradient(grey,black);
-    width: 100%;
-    height: auto; 
-    padding: 5px;
-    display: flex;
-    gap: 1px;
-    transition: all 2s;
-} 
-
-.flex-nav .flex-item {
-    width: 100%;
-    height: 40px;
-    margin-bottom: 10px;
-    padding-left: 200px;
-} 
-
-.flex-nav a {
-    color: white;
-}
 
 .flex-footer {
     background: linear-gradient( white,black);
@@ -40,6 +19,7 @@
     transition: all 5s;
 } 
 .flex-footer .flex-item-footer {
+    font-weight: bold;
     width: 100%;
     height: 40px;
     padding-left: 100px;
@@ -49,7 +29,7 @@
 
 
 
- */
+
 
 
 
@@ -65,14 +45,16 @@
     padding: 180px 50px;
     display: flex;
     gap: 10px;
-} */ 
+} 
 
-/* .flex-section-index .flex-item-section {
+.flex-section-index .flex-item-section {
     width: 100%;
     height: 450px;
     padding-top: 150px;
     background-color: green;
-} */
+}
+
+ */
 
 
 
@@ -85,8 +67,6 @@
 
 
 
-
-/* 
 .flex-section-index {
         background: linear-gradient(black, white);
         width: 100%; 
@@ -106,4 +86,4 @@
         padding-top: 150px;
         background-color: rgb(46, 192, 46);
         
-} */
+}
