--- a/estilo.css
+++ b/estilo.css
@@ -16,7 +16,7 @@
     padding: 80px;
     display: flex;
     gap: 5px;
-    transition: all 5s;
+    transition: all 3s;
 } 
 .flex-footer .flex-item-footer {
     font-weight: bold;
@@ -32,58 +32,53 @@
 
 
 
+/* productos destacados */
 
 
+@keyframes my-animation {
+    0% {
+        background-color: black; 
+    }
 
+    10% {
+        background-color: rgb(51, 63, 47); 
+    }
 
+    18% {
+        background-color: rgb(35, 78, 40); 
+    }
 
+    30% {
+        background-color: rgb(25, 91, 31); 
+    } 
 
-/* .flex-section-index {
-    background: linear-gradient(green, white);
-    width: 100%;
-    height: 800px;
-    padding: 180px 50px;
-    display: flex;
-    gap: 10px;
-} 
+    45% {
+        background-color: rgb(8, 76, 15); 
+    }
 
-.flex-section-index .flex-item-section {
-    width: 100%;
-    height: 450px;
-    padding-top: 150px;
-    background-color: green;
+    65% {
+        background-color: rgb(7, 135, 2); 
+    }
+
+    70% {
+        background-color: rgb(8, 76, 15); 
+    } 
+
+    82% {
+        background-color: rgb(25, 91, 31); 
+    } 
+
+    90% {
+        background-color: rgb(11, 36, 13);
+    }
+
+    100% {
+        background-color: rgb(35, 78, 40); 
+    }
 }
 
- */
-
-
-
-
-
-
-
-
-
-
-
-
-.flex-section-index {
-        background: linear-gradient(black, white);
-        width: 100%; 
-        height: 800px;
-        padding: 180px 50px;
-        display: flex;
-        gap: 10px;
-        transition: all 4s;
+.box-animado-1 {
+    background-color: tomato;
+    animation: my-animation 20s linear 0s infinite;
 }
 
-
-
-.flex-section-index .flex-item-section {
-    
-        width: 100%;
-        height: 450px;
-        padding-top: 150px;
-        background-color: rgb(46, 192, 46);
-        
-}
