--- a/estilo.css
+++ b/estilo.css
@@ -42,10 +42,18 @@
 
     10% {
         background-color: rgb(51, 63, 47); 
+    } 
+
+    14% {
+        background-color: rgb(24, 43, 18); 
     }
 
     18% {
         background-color: rgb(35, 78, 40); 
+    } 
+
+    24% {
+        background-color: rgb(9, 83, 18); 
     }
 
     30% {
@@ -64,12 +72,20 @@
         background-color: rgb(8, 76, 15); 
     } 
 
+    75% {
+        background-color: rgb(9, 83, 18); 
+    }
+
     82% {
         background-color: rgb(25, 91, 31); 
     } 
 
     90% {
         background-color: rgb(11, 36, 13);
+    } 
+
+    95% {
+        background-color: rgb(24, 43, 18); 
     }
 
     100% {
