--- a/estilo.css
+++ b/estilo.css
@@ -8,24 +8,16 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 } 
 
-
-.flex-footer {
-    background: linear-gradient( white,black);
-    width: 100%;
-    height: auto; 
-    padding: 80px;
-    display: flex;
-    gap: 5px;
-    transition: all 3s;
-} 
-.flex-footer .flex-item-footer {
-    font-weight: bold;
-    width: 100%;
-    height: 40px;
-    padding-left: 100px;
+footer {
+    background: linear-gradient(green, grey);
     color: white;
-    margin-bottom: 10px;
-} 
+    padding-top: 300px;
+    height: auto;
+}
+
+.prod-destacados {
+    padding: 4em;
+}
 
 
 
@@ -95,6 +87,10 @@
 
 .box-animado-1 {
     background-color: tomato;
+    animation: my-animation 20s linear 0s infinite;
+} 
+
+footer div {
     animation: my-animation 20s linear 0s infinite;
 }
 
