--- a/estilo.css
+++ b/estilo.css
@@ -274,6 +274,19 @@ footer div {
         font-size: 1.3rem;
     } 
 
+    .rrss-us {
+        width: 10rem;
+        height: 10rem; 
+        margin: 5rem 0rem 0rem 0rem; 
+        
+    }
+    
+    .rrss-us:active {
+        width: 10rem;
+        height: 10rem; 
+        margin: 2rem 0rem 0rem 0rem; 
+        transform: rotate(30deg);
+    }
 
 
 }
