--- a/Sass/estilo-lc.scss
+++ b/Sass/estilo-lc.scss
@@ -1,5 +1,6 @@
 *{
-    /*     background: linear-gradient(to right, rgb(161, 236, 161),white); */
+    /*     background: linear-gradient(to right, rgb(161, 236, 161),white); */ 
+
         margin: 0;
         padding: 0;
         box-sizing: border-box;
@@ -8,251 +9,37 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     } 
 
-    footer {
-        background: linear-gradient(green, grey);
-        color: white;
-        height: auto;
-        div {
-            animation: my-animation 20s linear 0s infinite;
-        } 
-    } 
+@import 'animation';
+@import 'index'; 
+@import 'us';
+@import 'products';
+@import 'responsive';
+@import 'clients';
+@import 'footer';
+@import 'contact';
+@import 'bases'; 
 
-    .name { 
-        display: flex; 
-        flex-direction: row-reverse;
-        background: radial-gradient(grey, black); 
-        padding: 1rem; 
-        .text-start {
+.gradient {
+    @extend .gradient;
+    background: radial-gradient(grey, black);
+    padding-bottom: 50rem; 
+}
 
-            a { 
-                height: 10rem; 
-                padding: 4rem;
-                color: white;
-                font-family:fantasy;  
-                text-decoration: none;
-            }
 
-            a:hover {
-                height: 10rem; 
-                padding: 4rem;
-                color: rgb(255, 94, 66);
-                font-family:fantasy; 
-            }
-        }
-    } 
+.gradient-extend {
+    @extend .gradient;
+    background: black;
+}
 
-    .gradient {
-        background: radial-gradient( grey, black);
-    } 
-
-    .box-contact {
-        height: 56rem;
-    }
-
-    .text-contact {
-        color: white; 
-        &:hover {
-            color: black;
-            background-color: white;
-        } 
-    } 
-
-    .us {
-        background: radial-gradient( grey, black);
-        height: 55rem; 
-        padding: 2rem;
-        .us-1 {
-            width: 19rem; 
-            height: 19rem;
-            padding: 1rem;
-            margin: 0rem 0rem 5rem 8rem; 
-            border: 2rem; 
-            content: 2rem;
-            background-color: rgba(8, 93, 14, 0.351); 
-            color: grey;
-            #img-us {
-                width: 17rem; 
-                height: 17rem;
-            } 
-            &:hover {
-                width: 17rem; 
-                height: 17rem;
-                padding: 2rem; 
-                margin: 0rem 0rem 5rem 8rem;
-                background-color: rgba(1, 22, 3, 0.801);
-                color: tomato;
-                transition: all 1s; 
-                box-shadow: 10px; 
-            }
-        } 
-
-        .us-2 { 
-            width: 20rem; 
-            height: 6rem;
-            padding: 1rem; 
-            margin: -5rem 0rem 0rem 30rem;
-            background-color: black;
-            color: white;
-            font-size: 0.5rem;
-            
-            &:hover { 
-                width: 40rem; 
-                height: 15rem;
-                padding: 1rem; 
-                margin: -5rem 0rem 0rem 30rem;
-                background-color: rgba(25, 25, 25, 0.494); 
-                color: rgb(238, 77, 48);
-                transition: all 2s;
-                font-size: 1.3rem;
-            }
-        }
-        .rrss-us {
-            width: 10rem;
-            height: 10rem; 
-            margin: -5rem 0rem 0rem 45rem; 
-            &:active {
-                width: 10rem;
-                height: 10rem; 
-                margin: -5rem 0rem 0rem 45rem; 
-                transform: rotate(30deg);
-            }
-        }
-    } 
-
-    @keyframes my-animation {
-        0% {
-            background-color: black; 
-        }
     
-        10% {
-            background-color: rgb(51, 63, 47); 
-        } 
-    
-        14% {
-            background-color: rgb(24, 43, 18); 
-        }
-    
-        18% {
-            background-color: rgb(35, 78, 40); 
-        } 
-    
-        24% {
-            background-color: rgb(9, 83, 18); 
-        }
-    
-        30% {
-            background-color: rgb(25, 91, 31); 
-        } 
-    
-        45% {
-            background-color: rgb(8, 76, 15); 
-        }
-    
-        65% {
-            background-color: rgb(7, 135, 2); 
-        }
-    
-        70% {
-            background-color: rgb(8, 76, 15); 
-        } 
-    
-        75% {
-            background-color: rgb(9, 83, 18); 
-        }
-    
-        82% {
-            background-color: rgb(25, 91, 31); 
-        } 
-    
-        90% {
-            background-color: rgb(11, 36, 13);
-        } 
-    
-        95% {
-            background-color: rgb(24, 43, 18); 
-        }
-    
-        100% {
-            background-color: rgb(35, 78, 40); 
-        }
-    }
 
-    .box-animado-1 {
-        background-color: tomato;
-        animation: my-animation 20s linear 0s infinite;
-    } 
 
-    @media (max-width: 1000px) {
-        .name {
-            .text-start {
-                a {
-                    display: none;
-                }
-            }
-        }
 
-        .us {
-            background: radial-gradient( grey, black);
-            height: 55rem; 
-            padding: 2rem;
-            .us-1 {
-                width: 12rem; 
-                height: 12rem;
-                padding: 1rem;
-                margin: 0rem 0rem 5rem 8rem; 
-                border: 2rem; 
-                content: 2rem;
-                background-color: rgb(111, 28, 0); 
-                color: grey; 
-                #img-us {
-                    width: 10rem; 
-                    height: 10rem;
-                }
-            
-                &:hover {
-                    width: 11rem; 
-                    height:11rem;
-                    padding: 2rem; 
-                    margin: 0rem 0rem 5rem 8rem;
-                    background-color: rgba(0, 0, 0, 0.494);
-                    color: tomato;
-                    transition: all 1s; 
-                    box-shadow: 10px;
-            } 
-     }
 
-     .us-2 { 
-        width: 15rem; 
-        height: 7rem;
-        padding: 1rem; 
-        margin: 1rem 0rem 0rem 2rem;
-        background-color: black;
-        color: white;
-        font-size: 0.5rem; 
-        &:hover { 
-            width: 27rem; 
-            height: 20rem;
-            padding: 1rem; 
-            margin: 1rem 0rem 5rem 2rem;
-            background-color: rgba(25, 25, 25, 0.494); 
-            color: rgb(238, 77, 48);
-            transition: all 1s;
-            font-size: 1.3rem;
-        } 
-    } 
 
-    .rrss-us {
-        width: 10rem;
-        height: 10rem; 
-        margin: 5rem 0rem 0rem 0rem; 
-        &:active {
-            width: 10rem;
-            height: 10rem; 
-            margin: 2rem 0rem 0rem 0rem; 
-            transform: rotate(30deg);
-        }
-    }
 
-    }
 
-    }
+
+ 
+
+
