--- a/Sass/_index.scss
+++ b/Sass/_index.scss
@@ -27,3 +27,28 @@ $colors: (
         }
     }
 } 
+
+.seccion-central {
+    .cont-index {
+        .gradient {
+         @extend .gradient;
+        background: radial-gradient(grey, black);
+    }
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    
+
+
+    .item-index{
+        width: auto;
+        background-color: wheat;
+        padding: 30px 20px; 
+        border: 5px solid green; 
+        margin-top: 200px;
+        margin-left: auto;
+    }
+    
+}
+
+}
