--- a/Sass/_index.scss
+++ b/Sass/_index.scss
@@ -28,6 +28,18 @@ $colors: (
     }
 } 
 
+.carousel {
+    .img-crsl{
+        height: 800px;
+        width: 500px;
+        padding: 1px;
+    }
+} 
+
+
+
+
+
 .seccion-central {
     .cont-index {
         .gradient {
@@ -37,7 +49,7 @@ $colors: (
     display: flex;
     width: 100%;
     justify-content: center;
-    
+
 
 
     .item-index{
@@ -48,7 +60,19 @@ $colors: (
         margin-top: 200px;
         margin-left: auto;
     }
-    
 }
+    height: auto;
+    padding: 20%;
+    display: flex;
+    .card-item {
+        height: 50px;
+        background-color: white;
+        margin: 10px;
+        .card-body {
+            background-color: tomato;
+            color: white;
+        }
+    }
+
 
 }
